--- a/scss/_patterns_modal.scss
+++ b/scss/_patterns_modal.scss
@@ -15,6 +15,7 @@
     right: 0;
     top: 0;
     width: 100%;
+    z-index: 101;
   }
 
   .p-modal__dialog {
